added insights and conclusion

--- a/EDA_Google_Playstore.ipynb
+++ b/EDA_Google_Playstore.ipynb
@@ -2721,6 +2721,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insights\n",
+    "\n",
+    "1. Family category has the most number of apps with 18% of apps belonging to it, followed by Games category which has 11% of the apps.\n",
+    "2. The least number of apps belong to the Beauty category with less than 1% of the total apps.\n",
+    "3. There are 271 apps having a 5-star rating.\n",
+    "4. The top 5 most installed apps in each popular category have been identified and saved in a CSV file.\n",
+    "5. The category with the largest number of installations is visualized.\n",
+    "\n",
+    "### Conclusion\n",
+    "\n",
+    "This project provided insights into the Google Play Store dataset through data cleaning, exploratory data analysis, and feature engineering. The visualizations helped identify popular app categories, highly installed apps, and other significant trends within the dataset. The findings can help app developers and marketers make informed decisions based on user preferences and trends."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
